--- a/Today/Common/Base.lproj/Main.storyboard
+++ b/Today/Common/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9bC-Sa-9Dz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cCw-tZ-8fJ">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -37,10 +37,29 @@
                             <outlet property="delegate" destination="9bC-Sa-9Dz" id="Bzw-ed-Zby"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" id="PeE-6K-I1E"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jem-cY-mYF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-12" y="28"/>
+            <point key="canvasLocation" x="916.92307692307691" y="27.72511848341232"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="kZr-ts-2NU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cCw-tZ-8fJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dD6-Tu-UVt">
+                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9bC-Sa-9Dz" kind="relationship" relationship="rootViewController" id="NeT-hv-MFO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hfC-pg-wFi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-12.307692307692307" y="27.72511848341232"/>
         </scene>
     </scenes>
     <resources>
